# fastapi-enum-dict

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  LICENSE  PROJECT_STRUCTURE.md  PYPI_RELEASE_REPORT.md  README.md  RELEASE_REPORT.md  REORGANIZATION_REPORT.md  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py
docs/: BUG_FIX_REPORT.md  COMPLETE_TEST_SUMMARY.md  DICT_TEST_RESULTS.md  INSTALL.md  PROJECT_STATUS_FINAL.md  QUICK_REFERENCE.md  QUICK_START.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  UNIT_TESTS_README.md
examples/: README.md  basic_usage.py
fastapi_enum_dict/: __init__.py  __main__.py
fastapi_enum_dict/cli/: __init__.py  __main__.py  crud_commands.py  init_command.py
fastapi_enum_dict/templates/: api_dicts.py.j2  api_enums.py.j2  api_init.py.j2  core_detector.py.j2  core_dict_manager.py.j2  core_enum_manager.py.j2  data_enum_helper.py.j2  data_enum_labels.py.j2  data_enums.py.j2  migration_init.py.j2  models_database.py.j2  models_dict.py.j2  models_init.py.j2  schemas_enum_dict.py.j2  schemas_init.py.j2
tests/: __init__.py  test_detector.py  test_simple.py
